[gd_scene load_steps=4 format=2]

[ext_resource path="res://tiles/tile_unplanted.material" type="Material" id=1]
[ext_resource path="res://buildings/pillar.glb" type="PackedScene" id=2]
[ext_resource path="res://buildings/Pillar.gd" type="Script" id=3]

[node name="Pillar" type="Spatial"]
script = ExtResource( 3 )

[node name="pillar" parent="." instance=ExtResource( 2 )]

[node name="tile003sliced" parent="pillar" index="0"]
material/0 = ExtResource( 1 )

[node name="tile004sliced" parent="pillar" index="1"]
material/0 = ExtResource( 1 )

[node name="tile005sliced" parent="pillar" index="2"]
material/0 = ExtResource( 1 )

[node name="pillar1001" parent="pillar" index="3"]
material/0 = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 0.997344, 0, 0.0728378, 0, 1, 0, -0.0728378, 0, 0.997344, 0, 0, 0 )
depth = 0.5
polygon = PoolVector2Array( -5.0204, 8.05791, -4.44825, 8.01605, -4.65757, 1.1922, -6.17864, 1.1922, -5.84372, 5.14138 )

[node name="MouseCheckTimer" type="Timer" parent="."]

[node name="MaterialChangeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="timeout" from="MouseCheckTimer" to="." method="_on_MouseCheckTimer_timeout"]
[connection signal="timeout" from="MaterialChangeTimer" to="." method="_on_MaterialChangeTimer_timeout"]

[editable path="pillar"]
